--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,7 +260,9 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+nav li,
+nav a {
   font-family: 'Raleway', sans-serif;
   text-transform: uppercase;
 }
@@ -277,6 +279,18 @@ h2 {
   font-size: 1.8rem;
   line-height: 3.6rem;
   letter-spacing: .5rem;
+}
+
+nav li,
+.socialIcons {
+  font-size: 1.4rem;
+  line-height: 1.6rem;
+}
+
+h3 {
+  font-size: 1.4rem;
+  line-height: 1.6rem;
+  letter-spacing: .2rem;
 }
 
 /* 
@@ -336,19 +350,20 @@ blogLinkTitle
 
 ...icons
 fas
-fa-plus
-fa-shopping-bag
-fa-search           f002
-fa-lemon            f094
-fa-utensils         f2e7
-fa-coffee           f0f4
-fa-glass-martini    f000
-fa-leaf             f06c
-fa-utensil-spoon    f2e5
-fa-quote-left       f10d
-fa-quote-right      f10e
-fa-chevron-left     f053
-fa-chevron-right    f054
+<i class="fas fa-plus"></i>
+<i class="fas fa-shopping-bag"></i>
+<i class="fas fa-search"></i></li>              f002
+<i class="fas fa-lemon"></i>                    f094
+<i class="fas fa-utensils"></i>                 f2e7
+<i class="fas fa-coffee"></i>                   f0f4
+<i class="fas fa-glass-martini"></i>            f000
+<i class="fas fa-leaf"></i>                     f06c
+<i class="fas fa-utensil-spoon"></i>            f2e5
+<i class="fas fa-quote-left"></i>               f10d
+<i class="fas fa-quote-right"></i>              f10e
+<i class="fas fa-chevron-left"></i>             f053
+<i class="fas fa-chevron-right"></i>            f054
+<i class="fas fa-long-arrow-alt-right"></i>     f30b
 
 ..social icons      
 fab
@@ -357,9 +372,14 @@ fa-instagram        f16d
 fa-twitter          f099
 fa-facebook-f       f39e
 */
-.fa, .fas, .fab, li > i {
+blockquote i,
+.feature i {
   font-weight: 900;
-  font-size: 3rem;
+  font-size: 3.2rem;
+}
+
+.scrollNav i {
+  font-size: 2rem;
 }
 
 ul {
@@ -368,7 +388,7 @@ ul {
   list-style: none;
 }
 
-ul li {
+li {
   list-style: none;
 }
 
