reworked gallery, sorted section and roughed in features on homepage

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -4,8 +4,8 @@ html {
 }
 
 body {
-    font-family: 'Raleway', sans-serif;
-    font-family: 'Lora', serif;
+    font-family: $primaryFont;
+    font-family: $secondaryFont;
     color: #000;
 }
 
@@ -18,7 +18,7 @@ h5,
 nav li,
 nav a
 {
-    font-family: 'Raleway', sans-serif;
+    font-family: $primaryFont;
     text-transform: uppercase ;
 }
 
@@ -45,10 +45,11 @@ h3{
     line-height: 1.6rem; 
     letter-spacing: .2rem;
 }
-// p {
-//     white-space: pre;
-//     word-break: break-word;
-// }
+p {
+    font-family: $secondaryFont;
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+}
 
 /* 
 topBar
@@ -158,8 +159,10 @@ li{
     list-style: none;
 }
 /* FIXES li and ul */
+
 a {
     text-decoration: none;
+    // removes underline
     // color: inherit;
 }
 
