--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,2 +1,6 @@
-$primaryColor: #333;
+$primaryFont:'Raleway', sans-serif;
+$secondaryFont: 'Lora', serif;
 
+
+
+// Main Green = #64A604 – Pink = #DC1570 – Light Green = #DDED9A
