--- a/styles/styles.css
+++ b/styles/styles.css
@@ -250,8 +250,8 @@ html {
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
-  font-family: 'Lora', serif;
+  font-family: "Raleway", sans-serif;
+  font-family: "Lora", serif;
   color: #000;
 }
 
@@ -263,7 +263,7 @@ h4,
 h5,
 nav li,
 nav a {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   text-transform: uppercase;
 }
 
@@ -291,6 +291,12 @@ h3 {
   font-size: 1.4rem;
   line-height: 1.6rem;
   letter-spacing: .2rem;
+}
+
+p {
+  font-family: "Lora", serif;
+  font-size: 1.4rem;
+  line-height: 2.4rem;
 }
 
 /* 
@@ -399,4 +405,91 @@ a {
 
 .socialIcons a {
   color: #000;
+}
+
+.featureContainer {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(50%, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+  grid-auto-rows: 37.5vw;
+}
+
+.galleryContainer {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: 21vw;
+}
+
+.galleryImg {
+  background-color: #777;
+}
+
+.featureImg img,
+.galleryImg img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.restaurant {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 48.5vw;
+}
+
+.restaurant div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 780px;
+  position: relative;
+  margin: auto;
+}
+
+.restaurant div img,
+.restaurant div h2,
+.restaurant div p {
+  margin: auto;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  text-align: center;
+}
+
+.sticker {
+  position: absolute;
+  z-index: 1;
+  top: -115px;
+  right: 50px;
+}
+
+.restaurant .graphicLine {
+  width: 60px;
+  height: 3px;
+  background-color: #64A604;
+}
+
+.restaurant h2 {
+  padding: 5% 0 1% 0;
+}
+
+.restaurant p {
+  padding-top: 3%;
 }
