--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,6 +1,15 @@
 $primaryFont:'Raleway', sans-serif;
 $secondaryFont: 'Lora', serif;
 
+$accentColor:  #64A604;
+
+$bkgdLightColor: #F6F6F6;
+$bkgdAccentColor: #DDED9A;
+
+$darkestNeutralColor: #2E2E2E;
+$darkNeuralColour: #333333;
+$mediumWarmColor: #999999;
+
 
 
 // Main Green = #64A604 – Pink = #DC1570 – Light Green = #DDED9A
