--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,7 +1,8 @@
-@import 'variables';
 @import 'setup';
+@import 'variables';
 @import 'global';
-@import 'header';
 @import 'homePage';
+@import 'header';
 @import 'footer';
+@import 'notes';
 
